--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,13 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+::-webkit-scrollbar {
+  width: 5px;
+  height: 5px;
+  background: #e2e2e2;
+}
+::-webkit-scrollbar-thumb {
+  background: #a0a0a0;
+  border-radius: 10px;
+}
